--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@
 }
 
 .navbar-logo {
-  background-image: url(/logo_img.jpg);
+  background-image: url(/myproject-1/logo_img.jpg);
   width: 140px;
   height: 50px;
   background-size: cover;
@@ -174,7 +174,7 @@ span{
     width: 100%;
     position: relative;
     top: 0px;
-    background-image: url(/hero_image.jpg);
+    background-image: url(/myproject-1/hero_image.jpg);
     background-size: cover;
 }
 
@@ -198,7 +198,7 @@ span{
 }
 
 .banner-img{
-    background-image: url(/sale_banner.jpg);
+    background-image: url(/myproject-1/sale_banner.jpg);
     background-size: cover;
     height: 300px;
     margin-left: 10px;
@@ -206,7 +206,7 @@ span{
     
 }
 .banner-img2{
-    background-image: url(/iphone\ _banner.jpg);
+    background-image: url(/myproject-1/iphone\ _banner.jpg);
     background-size: cover;
     height: 300px;
     
@@ -214,14 +214,14 @@ span{
     margin-right: 10px;
     
 }.banner-img3{
-    background-image: url(/clock.jpg);
+    background-image: url(/myproject-1/clock.jpg);
     background-size: cover;
     height: 300px;
     margin-left: 10px;
     margin-right: 10px;
     
 }.banner-img4{
-    background-image: url(/movie_banner.jpg);
+    background-image: url(/myproject-1/movie_banner.jpg);
     background-size: cover;
     height: 300px;
     margin-left: 10px;
@@ -229,7 +229,7 @@ span{
     
 }
 .shoe-img{
-    background-image: url(/shoe-1.jpg);
+    background-image: url(/myproject-1/shoe-1.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     height: 300px;
@@ -238,21 +238,21 @@ span{
     
 }
 .shoe-img2{
-    background-image: url(shoe-2.jpg);
+    background-image: url(/myproject-1/shoe-2.jpg);
     background-size: cover;
     height: 300px;
     margin-left: 10px;
     margin-right: 10px;
     
 }.shoe-img3{
-    background-image: url(/shoe-3.jpg);
+    background-image: url(/myproject-1/shoe-3.jpg);
     background-size: cover;
     height: 300px;
     margin-left: 10px;
     margin-right: 10px;
     
 }.shoe-img4{
-    background-image: url(/shoe-4.jpg);
+    background-image: url(/myproject-1/shoe-4.jpg);
     background-size: cover;
     height: 300px;
     margin-left: 10px;
